prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/const_scope_4.diag.txt
ERROR: Unknown variable [x]
testData/diagnostics/const_scope_4.nut:7:10

  case 1:
    print(x);
          ^
    break;


